[gd_scene load_steps=3 format=2]

[ext_resource path="res://OrbSelectWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://OrbSelectionContainer.gd" type="Script" id=2]

[node name="Selector" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.133333, 0.25098, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrbSelection" parent="." instance=ExtResource( 1 )]

[connection signal="orbSelected" from="OrbSelection" to="." method="_on_OrbSelection_orbSelected"]
